--- a/data/dockerfile
+++ b/data/dockerfile
@@ -8,6 +8,6 @@ RUN apt-get update && apt-get install -y libpq-dev gcc \
     && pip install -r requirements.txt \
     && apt-get autoremove -y gcc
 
-CMD [ "python" ]
+CMD [ "python", "run.py"]
 
 
