--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3.8"
 services: 
     python:
         build: data
+        env_file: .env
         volumes: 
             - "./data:/app"
         depends_on:
@@ -9,10 +10,7 @@ services:
     db:
         image: postgres:13.1
         restart: always
-        environment: 
-            - POSTGRES_PASSWORD=modsem
-            - POSTGRES_USER=modsem
-            - POSTGRES_DB=faktnews
+        env_file: .env
         ports:
             - 5432:5432
         volumes:
