--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
         build: data
         env_file: .env
         volumes: 
-            - "./data:/app"
+            - "./data:/app" #for code sync
         depends_on:
             - "db"
     db:
@@ -15,6 +15,16 @@ services:
             - 5432:5432
         volumes:
             - db-volume:/var/lib/postgresql/data
+    
+    rdf:
+        image: ontotext/graphdb:9.5.0-se
+        ports:
+            - 7200:7200
+        volumes:
+            - rdf-volume:/opt/graphdb/home
+            - ./license:/opt/graphdb/home/conf # for graphdb se license
+
 
 volumes:
    db-volume:
+   rdf-volume:
