Add trick to keep python container running for development

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
     python:
         build: data
         env_file: .env
+        tty: true # keep container running
         volumes: 
             - "./data:/app" #for code sync
         depends_on:
