--- a/data/dockerfile
+++ b/data/dockerfile
@@ -1,12 +1,27 @@
 FROM python:3.7-slim-buster
 WORKDIR /app
 
+ARG USER
+ARG USER_ID
+ARG GROUP_ID
+
+
 COPY requirements.txt .
 
 # Some package requires gcc to be builded.
 RUN apt-get update && apt-get install -y libpq-dev gcc \
     && pip install --no-cache-dir -r requirements.txt \
     && apt-get autoremove -y gcc
+
+
+# Make sure to create a user inside the container mapped with the one on the host system.
+# This help to access files without user privileges errors.
+RUN if [ ${USER_ID} -ne 0 ] && [ ${GROUP_ID} -ne 0 ]; then \
+    groupadd -g ${GROUP_ID} ${USER} &&\
+    useradd -l -u ${USER_ID} -g ${GROUP_ID} ${USER} \
+    ;fi
+
+USER ${USER}
 
 CMD [ "python", "run.py"]
 
