Updat env template with deafult values

--- a/.env.template
+++ b/.env.template
@@ -1,8 +1,9 @@
+# Database Credentials
 POSTGRES_PASSWORD=
-POSTGRES_USER=
-POSTGRES_DB=
+POSTGRES_USER=modsem
+POSTGRES_DB=faktnews
 
-# Python container user
+# Python service user
 PY_USER=root
 PY_USER_ID=0
 PY_GROUP_ID=0
