start working on R2RML mapping

--- a/.gitignore
+++ b/.gitignore
@@ -188,3 +188,4 @@ $RECYCLE.BIN/
 
 # Projects michellaneous files -------------------------------------------------
 .vscode
+ontology/fakt-news.properties
