updated SQL schema

--- a/data/dockerfile
+++ b/data/dockerfile
@@ -23,6 +23,6 @@ RUN if [ ${USER_ID} -ne 0 ] && [ ${GROUP_ID} -ne 0 ]; then \
 
 USER ${USER}
 
-CMD [ "python", "db_scripts/init_db.py"]
+CMD [ "python", "run.py"]
 
 
