Update docker compose settings for rdf  store creation python script

--- a/.env.template
+++ b/.env.template
@@ -7,3 +7,6 @@ POSTGRES_DB=faktnews
 PY_USER=root
 PY_USER_ID=0
 PY_GROUP_ID=0
+
+RDF_STORE_ID=modsem-faktnews
+RDF_STORE_BASE_URL="http://example.org/faktnews-test"
