--- a/app/fakt-news/package.json
+++ b/app/fakt-news/package.json
@@ -3,17 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@innotrade/enapso-graphdb-client": "^1.8.1",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "bootstrap": "^4.5.3",
     "bootstrap-icons": "^1.2.2",
+    "graphdb": "^1.5.0",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "sparql-connect": "^0.1.6",
+    "sparqljs": "^3.2.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
