--- a/app/fakt-news/dockerfile
+++ b/app/fakt-news/dockerfile
@@ -1,21 +1,22 @@
+ARG USER
+ARG USER_ID
+ARG GROUP_ID
+
 # pull the base image
-FROM node
+FROM node:15.10.0-buster-slim
 
 # set the working direction
 WORKDIR /app
+
+USER ${USER}
 
 # add `/app/node_modules/.bin` to $PATH
 ENV PATH /app/node_modules/.bin:$PATH
 
 # install app dependencies
-COPY package.json ./
-
-COPY package-lock.json ./
-
+COPY package.json .
+COPY package-lock.json .
 RUN npm install
-
-# add app
-COPY . ./
 
 # start app
 CMD ["npm", "start"]
