Migration to graphdb free completed. Works!

--- a/app/fakt-news/dockerfile
+++ b/app/fakt-news/dockerfile
@@ -16,7 +16,7 @@ ENV PATH /app/node_modules/.bin:$PATH
 # install app dependencies
 COPY package.json .
 COPY package-lock.json .
-RUN npm install
+# RUN npm install  # run only oh the first time!!
 
 # start app
 CMD ["npm", "start"]
