added some query to the query txt file

--- a/.gitignore
+++ b/.gitignore
@@ -189,3 +189,4 @@ $RECYCLE.BIN/
 # Projects michellaneous files -------------------------------------------------
 .vscode
 ontology/fakt-news.properties
+ontology/catalog-v001.xml
