--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
         - GROUP_ID=${PY_GROUP_ID}
 
     env_file: .env
+    command: "tail -f /dev/null"
     volumes:
       - "./data:/app" #for code sync
       - "./ontology:/app/rdf" #for code sync
